--- a/Module 2/CI_CD/.github/workflows/citest.yaml
+++ b/Module 2/CI_CD/.github/workflows/citest.yaml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo "The job was automatically triggered by a ${{ github.event_name}} event."
-      - run: main.py
+      - run: python main.py
