--- a/Module 2/CI_CD/.github/workflows/mergeci.yaml
+++ b/Module 2/CI_CD/.github/workflows/mergeci.yaml
@@ -9,4 +9,4 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     steps:
       - uses: actions/checkout@v2
-      - run: main.py
+      - run: python main.py
