--- a/Module4/Module_4B/pom.xml
+++ b/Module4/Module_4B/pom.xml
@@ -34,8 +34,14 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>7.7.1</version>
-      <scope>test</scope>
+      <scope>main</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>junit</groupId>-->
+<!--      <artifactId>junit</artifactId>-->
+<!--      <version>RELEASE</version>-->
+<!--      <scope>compile</scope>-->
+<!--    </dependency>-->
 
   </dependencies>
 </project>
